--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "hpp": "^0.2.2",
+    "mime": "^2.3.1",
     "mongoose": "^5.2.10",
+    "multer": "^1.3.1",
     "pm2": "^3.0.3",
     "react": "^16.4.2",
     "winston": "^3.0.0"
