--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "hpp": "^0.2.2",
+    "jsonwebtoken": "^8.3.0",
     "mime": "^2.3.1",
     "mongoose": "^5.2.10",
     "multer": "^1.3.1",
