--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "hpp": "^0.2.2",
+    "json2csv": "^4.2.1",
     "jsonwebtoken": "^8.3.0",
     "mime": "^2.3.1",
     "mongoose": "^5.2.10",
