--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
-    "aws-sdk": "^2.334.0",
+    "aws-sdk": "^2.345.0",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
@@ -33,11 +33,12 @@
     "hpp": "^0.2.2",
     "json2csv": "^4.2.1",
     "jsonwebtoken": "^8.3.0",
+    "lodash.camelcase": "^4.3.0",
     "mime": "^2.3.1",
-    "mongoose": "^5.3.3",
+    "mongoose": "^5.3.8",
     "multer": "^1.4.1",
     "pm2": "^3.2.2",
-    "react": "^16.5.2",
+    "react": "^16.6.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
@@ -47,41 +48,42 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^3.2.1",
+    "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.7.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.8.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
+    "image-webpack-loader": "^4.4.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.1.1",
+    "postcss-preset-env": "^6.3.0",
     "precss": "^3.1.2",
-    "react-dom": "^16.5.2",
+    "react-day-picker": "^7.2.4",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.11",
     "react-loadable": "^5.5.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.5.2",
-    "recharts": "^1.3.4",
+    "react-test-renderer": "^16.6.0",
+    "recharts": "^1.3.5",
     "redux": "^4.0.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1",
-    "workbox-webpack-plugin": "^3.6.2"
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
