--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.4.1",
     "pm2": "^3.2.2",
     "react": "^16.6.0",
+    "request-promise": "^4.2.2",
     "winston": "^3.1.0"
   },
   "devDependencies": {
