--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "aws-sdk": "^2.345.0",
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
+    "email-verification": "^0.4.6",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
