--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
-    "aws-sdk": "^2.362.0",
+    "aws-sdk": "^2.368.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -36,8 +36,8 @@
     "json2csv": "^4.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash.camelcase": "^4.3.0",
-    "mime": "^2.3.1",
-    "mongoose": "^5.3.13",
+    "mime": "^2.4.0",
+    "mongoose": "^5.3.14",
     "multer": "^1.4.1",
     "pm2": "^3.2.2",
     "react": "^16.6.3",
@@ -52,7 +52,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^3.6.0",
+    "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.4",
@@ -81,6 +81,7 @@
     "redux": "^4.0.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
