--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "email-verification": "^0.4.6",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "express": "^4.16.4",
+    "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
     "json2csv": "^4.3.1",
@@ -39,6 +40,7 @@
     "mime": "^2.4.0",
     "mongoose": "^5.3.14",
     "multer": "^1.4.1",
+    "nodemon": "^1.18.7",
     "pm2": "^3.2.2",
     "react": "^16.6.3",
     "request": "^2.88.0",
