--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.4.0",
     "lodash.camelcase": "^4.3.0",
     "mime": "^2.4.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "multer": "^1.4.1",
     "nodemon": "^1.18.7",
