--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "create-react-class": "^15.6.3",
     "dotenv": "^6.1.0",
     "email-verification": "^0.4.6",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -37,6 +38,7 @@
     "hpp": "^0.2.2",
     "json2csv": "^4.3.1",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "mime": "^2.4.0",
     "moment": "^2.22.2",
