--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "express": "^4.16.4",
     "express-paginate": "^1.0.0",
+    "file-saver": "^2.0.0",
     "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
