--- a/config/.env.production
+++ b/config/.env.production
@@ -1,3 +1,11 @@
-DB_URI="mongodb+srv://visual-search-user:pMirQlhcJSPKwxty@cluster0-hu9pf.mongodb.net/?retryWrites=true"
-JWT_SECRET="SvP3-Rs.EcR3T{p455}"
-NODE_ENV="development"
+DB_URI=mongodb+srv://visual-search-user:pMirQlhcJSPKwxty@cluster0-hu9pf.mongodb.net/?retryWrites=true
+JWT_SECRET=SvP3-Rs.EcR3T{p455}
+NODE_ENV=production
+PORT=8080
+API_URL=http://localhost:8080
+ENGINE_URL=https://admin.vs-01-dev.qbo.tech
+#SERVER_ONLY=true
+#DASHBOARD_ONLY=true
+INV_EMAIL=ingenieria@connus.mx
+INV_PASS=kawlantcloud
+VERIFICATION_URL=http://localhost:8080/signup?token=${URL}
