--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '3'
 services:
     mongodatabase:
         image: mongo:latest
@@ -11,13 +11,36 @@ services:
         ports:
           - 27017:27017
           - 27018:27018
+        networks:
+          - backend
+    nginx:
+        image: nginx:latest
+        container_name: "prod_nginx"
+        env_file:
+          - ./config/.env.production
+        volumes:
+          - ./config/nginx.conf:/etc/nginx/nginx.conf
+          - ./config/certificates:/etc/letsencrypt/
+        ports:
+          - 80:80
+          - 443:443
+        networks:
+          - frontend
     visualsearchapi:
         build: .
-        ###environment:
-        ###  - MONGODB_URL=mongodb://mongodatabase:27017
+        env_file:
+          - ./config/.env.production
+        environment:
+          - NODE_ENV=production
         ports:
           - 8080:8080
         depends_on:
           - mongodatabase
         links:
           - mongodatabase
+        networks:
+          - backend
+          - frontend
+networks:
+    backend:
+    frontend:
