--- a/package.json
+++ b/package.json
@@ -23,10 +23,21 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "aws-sdk": "^2.380.0",
     "axios": "^0.18.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "clean-webpack-plugin": "^1.0.0",
     "create-react-class": "^15.6.3",
     "dotenv": "^6.2.0",
     "email-verification": "^0.4.6",
@@ -37,11 +48,14 @@
     "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "json2csv": "^4.3.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "mime": "^2.4.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.23.0",
     "mongoose": "^5.4.0",
     "multer": "^1.4.1",
@@ -50,30 +64,23 @@
     "react": "^16.6.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "winston": "^3.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "winston": "^3.1.0",
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.1.5",
+    "webpack-pwa-manifest": "^4.0.0",
+    "workbox-webpack-plugin": "^3.6.3",
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^2.0.1",
     "eslint": "^5.10.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
     "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "precss": "^4.0.0",
@@ -88,15 +95,6 @@
     "recharts": "^1.4.1",
     "redux": "^4.0.1",
     "resolve-url-loader": "^3.0.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.5",
-    "webpack-pwa-manifest": "^4.0.0",
-    "workbox-webpack-plugin": "^3.6.3"
+    "style-loader": "^0.23.1"
   }
 }
