--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/preset-react": "^7.0.0",
     "aws-sdk": "^2.380.0",
     "axios": "^0.18.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.1",
     "bcryptjs": "^2.4.3",
