--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,18 +17,19 @@ services:
     # Build Nginx on server. Ensure have certificates on config files.  Modify URLs on Nginx conf
     nginx:
         image: nginx:latest
-        container_name: "prod_nginx"
         env_file:
           - ./config/env/.env.production
         volumes:
-          - ./config/nginx.conf:/etc/nginx/nginx.conf
-          - ./config/certificates:/etc/letsencrypt/
+          - ./config/nginx:/etc/nginx/conf.d
+          - ./config/certificates/conf:/etc/letsencrypt/
+          - ./config/certificates/www:/var/www/certbot
           - ./config/env:/usr/share/app/config/
         ports:
           - 80:80
           - 443:443
         networks:
           - frontend
+        restart: always
     visualsearchapi:
         build: .
         env_file:
@@ -44,6 +45,11 @@ services:
         networks:
           - backend
           - frontend
+    certbot:
+      image: certbot/certbot
+      volumes:
+        - ./config/certificates/conf:/etc/letsencrypt/
+        - ./config/certificates/www:/var/www/certbot
 networks:
     backend:
     frontend:
