--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,17 @@
-node_modules
+# Logs
+logs
+*.log
+
+# Git
 .git
-*.DS_Store
+.gitignore
+
+# OS Files
+.DS_Store
+
+# Node
+node_modules
+dist
+
+# User defaults
+README.md
