--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react-boilerplate",
-  "version": "0.7",
+  "name": "visual-search-api",
+  "version": "0.7.0",
   "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
-    "start": "pm2-dev ./config/ecosystem.config.js",
-    "start:nodemon": "NODE_ENV=development nodemon --ignore 'src/**' --ext \"graphql js\"",
-    "start:prod": "NODE_ENV=production pm2 start server.js",
-    "build:prod": "webpack --config ./config/webpack.prod.js",
-    "start:docker": "pm2-docker start ./config/ecosystem.docker.config.js",
-    "test": "jest",
-    "precommit": "lint-staged",
-    "stats": "webpack-cli --config ./config/webpack.prod.js --json > stats.json"
+    "start": "npx pm2-dev ./config/ecosystem.config.js",
+    "start:nodemon": "NODE_ENV=development npx nodemon --ignore 'src/**' --ext \"graphql js\"",
+    "start:prod": "NODE_ENV=production npx pm2 start server.js",
+    "build:prod": "npx webpack --config ./config/webpack.prod.js",
+    "start:docker": "npx pm2-docker start ./config/ecosystem.docker.config.js",
+    "test": "npx jest",
+    "precommit": "npx lint-staged",
+    "stats": "npx webpack-cli --config ./config/webpack.prod.js --json > stats.json"
   },
   "author": "nure,",
   "license": "MIT",
@@ -30,27 +30,25 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "aws-sdk": "^2.380.0",
+    "aws-sdk": "^2.391.0",
     "axios": "^0.18.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "css-loader": "^2.0.1",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "clean-webpack-plugin": "^1.0.0",
+    "cors": "^2.8.5",
     "create-react-class": "^15.6.3",
+    "css-loader": "^2.0.1",
     "dotenv": "^6.2.0",
-    "dotenv-webpack": "^1.6.0",
+    "dotenv-webpack": "^1.7.0",
     "email-verification": "^0.4.6",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
     "express": "^4.16.4",
     "express-paginate": "^1.0.0",
+    "file-loader": "^3.0.1",
     "file-saver": "^2.0.0",
     "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
     "json2csv": "^4.3.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
@@ -58,44 +56,47 @@
     "mime": "^2.4.0",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.23.0",
-    "mongoose": "^5.4.0",
+    "mongoose": "^5.4.5",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.9",
-    "pm2": "^3.2.4",
+    "pm2": "^3.2.9",
     "react": "^16.6.3",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "winston": "^3.1.0",
-    "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.5",
-    "webpack-pwa-manifest": "^4.0.0",
-    "workbox-webpack-plugin": "^3.6.3",
-    "@material-ui/core": "^3.7.0",
-    "@material-ui/icons": "^3.0.1",
-    "eslint": "^5.10.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
-    "jest": "^23.6.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
-    "precss": "^4.0.0",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.6.3",
     "react-loadable": "^5.5.0",
-    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.6.3",
     "recharts": "^1.4.1",
     "redux": "^4.0.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "resolve-url-loader": "^3.0.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.1",
+    "eslint": "^5.12.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.9",
+    "precss": "^4.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
+    "terser-webpack-plugin": "^1.2.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.5.1",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.1.5",
+    "webpack-pwa-manifest": "^4.0.0",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
