--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
         server_name _;
         return 301 https://$host$request_uri;
         location /.well-known/acme-challenge/ {
-           root /var/www/cerbot;
+           root /var/www/certbot;
         }
 }
 
@@ -25,7 +25,6 @@ server {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
         ### Old nginx Version
         #ssl on;
-
         location / {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
