--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
-    "start": "npx pm2-dev ./config/ecosystem.config.js",
-    "start:nodemon": "NODE_ENV=development npx nodemon --ignore 'src/**' --ext \"graphql js\"",
+    "start": "NODE_ENV=development npx nodemon --ignore 'src/**' --ext \"graphql js\"",
     "start:prod": "NODE_ENV=production npx pm2 start server.js",
     "build:prod": "npx webpack --config ./config/webpack.prod.js",
-    "start:docker": "npx pm2-docker start ./config/ecosystem.docker.config.js",
+    "start:docker": "npx pm2-docker start ./config/ecosystem.config.json",
     "test": "npx jest",
     "precommit": "npx lint-staged",
     "stats": "npx webpack-cli --config ./config/webpack.prod.js --json > stats.json"
