--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=development npx nodemon --ignore 'src/**' --ext \"graphql js\"",
-    "start:prod": "NODE_ENV=production npx pm2 start server.js",
-    "build:prod": "npx webpack --config ./config/webpack.prod.js",
-    "start:docker": "npx pm2-docker start ./config/ecosystem.config.json",
+    "serve": "NODE_ENV=production npx pm2 start server.js",
+    "build:prod": "npx webpack-cli --config ./config/webpack.prod.js",
+    "serve:docker": "npx pm2-docker start ./config/ecosystem.config.json",
     "test": "npx jest",
     "precommit": "npx lint-staged",
     "stats": "npx webpack-cli --config ./config/webpack.prod.js --json > stats.json"
@@ -77,6 +77,7 @@
   "devDependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.1",
+    "autoprefixer": "^9.4.5",
     "eslint": "^5.12.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
@@ -85,12 +86,12 @@
     "image-webpack-loader": "^4.6.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
-    "precss": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
+    "precss": "^4.0.0",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.28.4",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-middleware": "^3.5.1",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
