Added password reset

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hpp": "^0.2.2",
     "json2csv": "^4.3.2",
     "jsonwebtoken": "^8.4.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "mime": "^2.4.0",
@@ -58,6 +59,7 @@
     "mongoose": "^5.4.5",
     "multer": "^1.4.1",
     "pm2": "^3.2.9",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
