--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "moment": "^2.23.0",
     "mongoose": "^5.4.5",
     "multer": "^1.4.1",
+    "nodemailer-ses-transport": "^1.5.1",
     "pm2": "^3.2.9",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
