--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express-paginate": "^1.0.0",
     "file-loader": "^3.0.1",
     "file-saver": "^2.0.0",
+    "file-type": "^10.7.1",
     "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
