--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -28,6 +28,7 @@ server {
         ### Old nginx Version
         #ssl on;
         location / {
+                client_max_body_size 6M;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-NginX-Proxy true;
@@ -37,8 +38,8 @@ server {
                 proxy_cache_bypass $http_upgrade;
                 proxy_redirect off;
         }
-    ssl_certificate /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # ssl_certificate /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/fullchain.pem; # managed by Certbot
+    # ssl_certificate_key /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/privkey.pem; # managed by Certbot
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
