Time out correction

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -26,7 +26,7 @@ server {
         gzip_min_length 256;
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
         ### Old nginx Version
-        #ssl on;
+        ssl on;
         location / {
                 client_max_body_size 6M;
                 proxy_set_header X-Real-IP $remote_addr;
@@ -38,8 +38,8 @@ server {
                 proxy_cache_bypass $http_upgrade;
                 proxy_redirect off;
         }
-    # ssl_certificate /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/api.vs-01-dev.qbo.tech/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
