--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -26,7 +26,7 @@ server {
         gzip_min_length 256;
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
         ### Old nginx Version
-        ssl on;
+        # ssl on;
         location / {
                 client_max_body_size 6M;
                 proxy_set_header X-Real-IP $remote_addr;
