--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "email-verification": "https://github.com/nuremx/node-email-verification",
-    "express": "^4.16.4",
+    "express": "4.16.4",
     "express-paginate": "^1.0.0",
     "file-loader": "^3.0.1",
     "file-saver": "^2.0.0",
