--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
     "clean-webpack-plugin": "^1.0.0",
     "cors": "^2.8.5",
@@ -50,6 +51,7 @@
     "global": "^4.3.2",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
+    "is-base64": "^0.1.0",
     "json2csv": "^4.3.2",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
@@ -76,6 +78,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "resolve-url-loader": "^3.0.0",
+    "shortid": "^2.2.14",
     "style-loader": "^0.23.1",
     "winston": "^3.1.0"
   },
