--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "email-verification": "https://github.com/nuremx/node-email-verification",
     "express": "4.16.4",
     "express-paginate": "^1.0.0",
+    "express-validator": "^6.1.1",
     "file-loader": "^3.0.1",
     "file-saver": "^2.0.0",
     "file-type": "^10.7.1",
